chore(build): atualiza configurações do projeto e adiciona suporte a acesso nativo